[package]
name = "strumok_suppliers"
version = "3.9.2"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies.reqwest]
features = [
    "charset",
    "http2",
    "rustls",
    "cookies",
    "query",
    "form",
    "json",
    # Compression
    "brotli",
    "gzip",
]
version = "0.13.2"
default-features = false

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
log = { version = "0.4.29", features = ["release_max_level_info"] }
env_logger = "0.11.9"
test-log = "0.2.19"
cipher = "0.5.0"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
pbkdf2 = { version = "0.12", features = ["simple"] }
# byteorder = "1.5.0"
# blowfish = "0.9.1"
block-modes = "0.9.1"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
rc4 = "0.1.0"
hex = "0.4.3"
base64 = "0.22.1"
urlencoding = "2.1.3"
hickory-resolver = "0.25.2"
anyhow = "1.0.101"
enum_dispatch = "0.3.13"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.25.0"
regex = "1.12.3"
chrono = "0.4.43"
futures = "0.3.31"
indexmap = "2.13.0"
